--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.10.4
   flutter_gen_runner: ^5.12.0
+  flutter_launcher_icons: ^0.13.1
 flutter:
   uses-material-design: true
   assets:
@@ -33,3 +34,7 @@ flutter:
     - assets/svg/
     - assets/gear.png
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icons/app_icon.png"  # <-- your PNG icon here
