--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "photopin" "\0"
+            VALUE "FileDescription", "PhotoPin" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "photopin" "\0"
+            VALUE "InternalName", "PhotoPin" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "photopin.exe" "\0"
-            VALUE "ProductName", "photopin" "\0"
+            VALUE "OriginalFilename", "PhotoPin.exe" "\0"
+            VALUE "ProductName", "PhotoPin" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
